debian-installer (20031030) UNRELEASED; urgency=low

  * Improved the copyright file, decided not to try to list the copyright
    of every component of the images.
  * Uppercased the md5sums filename.
  * New retriever menu setup:
    - add load-floppy and download-installer to floppy
    - add load-installer to cdrom, cd_drivers, netboot
    - add load-iso to hd-media
  * Remove pcmcia-udeb from pkg-lists, hw-detect took over.
  * Make d-i-demo catch SIGINT, clean up properly.
  * Fix kernel module package names in udeb_include for driver floppies.
  * Build includes new cdebconf, fixed partconf, etc, etc. Many other fixes
    and improvements.
  * Alastair McKinstry:
    - Add additional shade characters to fix the scroll bar in the newt
      frontend.
  * Richard Hirst:
    - Misc ia64 fixes - define KERNEL_FLAVOUR, clean up pkglists, etc

 -- Joey Hess <joeyh@debian.org>  Thu, 30 Oct 2003 15:12:38 -0500

debian-installer (20031029) unstable; urgency=low

  * Initial release.
  * This includes a deb that lets a demo of the installer be run
    (and triggers autobuilders), but the main payload is the
    debian-installer-images tarball, which is designed to be unpacked
    by ftp-master into the ftp site.
  * Set architecture to i386, powerpc for now. More will be added
    once d-i works on them well enough to distribute images.

 -- Joey Hess <joeyh@debian.org>  Wed, 22 Oct 2003 16:16:21 -0400