@@ -12,6 +12,7 @@ busybox-cvs-udeb
 languagechooser
 nano-udeb
 bogl-bterm-udeb
+di-utils-terminfo
 kbd-chooser
 
 # floppy loading support
